<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Button untuk membuka Browser -->
    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3DCE0C"
        android:text="@string/button_label_browser" />

    <!-- Button untuk membuka Kontak -->
    <Button
        android:id="@+id/button_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/button_label_contact" />

    <!-- Button untuk membuka Google Maps -->
    <Button
        android:id="@+id/button_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/button_label_map" />

    <!-- Button untuk membuka Dialer (telepon) -->
    <Button
        android:id="@+id/button_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/button_label_dial" />

    <!-- Button Toast -->
    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_label_toast"
        app:cornerRadius="20dp" />

    <!-- TextView untuk menampilkan count -->
    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/count_initial_value"
        android:textSize="160sp" />

    <!-- Button Count -->
    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_label_count"
        app:cornerRadius="20dp" />

    <!-- Button Switch Page -->
    <Button
        android:id="@+id/button_switchpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_label_pindah"
        app:cornerRadius="20dp" />

</LinearLayout>
